# ArionXiv

./: .dockerignore  .env.example  .gitignore  .vercelignore  CNAME  Dockerfile  ENV_VARS.md  MANIFEST.in  Procfile  README.md  deploy-ec2.sh  pyproject.toml  railway.toml  render.yaml  requirements-server.txt  requirements.txt  setup.py  vercel.json  verify_deployment.py
.github/workflows/: daily-dose.yml
api/: index.py  pyproject.toml  requirements.txt
arionxiv/: __init__.py  __main__.py  github_actions_runner.py  main.py  scheduler_daemon.py  server.py  server_main.py
arionxiv/arxiv_operations/: client.py  fetcher.py  searcher.py  utils.py
arionxiv/cli/: __init__.py  main.py
arionxiv/cli/commands/: __init__.py  analyze.py  auth.py  chat.py  daily.py  fetch.py  library.py  preferences.py  search.py  settings_unified.py  trending.py  welcome.py
arionxiv/cli/ui/: global_theme_manager.py  logo.py  splash.py  theme.py  theme_system.py
arionxiv/cli/utils/: __init__.py  (+5 more)
arionxiv/prompts/: __init__.py  prompts.py
arionxiv/rag_techniques/: __init__.py  basic_rag.py
arionxiv/services/: __init__.py  llm_client.py  unified_analysis_service.py  unified_auth_service.py  unified_config_service.py  unified_daily_dose_service.py  unified_database_service.py  unified_llm_service.py  unified_paper_service.py  unified_pdf_service.py  unified_prompt_service.py  unified_scheduler_service.py  unified_user_service.py
arionxiv/utils/: __init__.py  api_helpers.py  file_cleanup.py  ip_helper.py
tests/: conftest.py  test_rag_chat.py  test_unified_auth_service.py
(+4 files in other folders)
